--- a/catalog/view/theme/helium/template/common/cart_button.twig
+++ b/catalog/view/theme/helium/template/common/cart_button.twig
@@ -1,7 +1,7 @@
 <div  class="cart-header-button" >
   <button data-action="cartShowModal" id="cart-header-button" type="button" class="primary" aria-label="{{ text_cart }}">
   <i class="icon-cart"></i>
-  <span id="total_cart">{{ total_cart }}</span>
-  <span id="product_count" class="product-count">{{ product_count }}</span>
+  <span class="cart_title">{{ total_cart }}</span>
+  <span class="product-count c_count">{{ product_count }}</span>
   </button>
 </div>
