--- a/catalog/view/theme/helium/template/common/review_form.twig
+++ b/catalog/view/theme/helium/template/common/review_form.twig
@@ -1,28 +1,25 @@
-<form  id="form-review">
+<form id="form-review">
   <span class="h2">{{ text_write }}</span>
   <div class="form-group required">
-    {# <label for="input-name">{{ entry_name }}</label> #}
     <input type="text" placeholder="{{ entry_name }}" name="name" value="{{ customer_name }}" id="input-name" />
   </div>
   <div class="form-group required">
-    {# <label for="input-review">{{ entry_review }}</label> #}
     <textarea name="text" placeholder="{{ entry_review }}" rows="5" id="input-review" class="form-control"></textarea>
-    {# <div class="help-block">{{ text_note }}</div> #}
   </div>
 
   <label>{{ entry_rating }}</label>
-  {# Звездочки выбор оценки #}
+  {# Rating stars #}
   <div class="form-group required rating">
     {% for i in 5..1 %}
-    <input id="rating_{{ i }}" type="radio" name="rating" value="{{ i }}" {% if i == 5 %} checked {% endif %} />
-    <label for="rating_{{ i }}"><i class="icon-star"></i></label>
+      <input id="rating_{{ i }}" type="radio" name="rating" value="{{ i }}" {% if i == 5 %} checked {% endif %} />
+      <label for="rating_{{ i }}"><i class="icon-star"></i></label>
     {% endfor %}
   </div>
   {{ captcha }}
 
   <div class="buttons clearfix">
     <div class="pull-right">
-      <button type="submit" id="button-review" data-type="{{ type }}" data-id="{{ entity_id }}" class="primary">
+      <button data-action="sendReview" type="button" data-type="{{ type }}" data-id="{{ entity_id }}" data-form="form-review" class="primary">
         {{ button_send_review }}
       </button>
     </div>
