--- a/catalog/view/theme/helium/template/account/login.twig
+++ b/catalog/view/theme/helium/template/account/login.twig
@@ -7,36 +7,38 @@
   {% if error_warning %}
   <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
-    {{ content_top }}
-      <div class="row">
-        <div class="col-sm-6">
-            <h2>{{ text_new_customer }}</h2>
-            <p><strong>{{ text_register }}</strong></p>
-            <p>{{ text_register_account }}</p>
-            <a href="{{ register }}" class="primary">{{ button_continue }}</a>
+  {{ content_top }}
+  <div class="row">
+    <div>
+        <h2>{{ text_new_customer }}</h2>
+        <p><strong>{{ text_register }}</strong></p>
+        <p>{{ text_register_account }}</p>
+        <a href="{{ register }}" class="button primary">{{ button_continue }}</a>
+    </div>
+    <br/>
+    <div>
+      <h2>{{ text_returning_customer }}</h2>
+      <p><strong>{{ text_i_am_returning_customer }}</strong></p>
+      <form action="{{ action }}" method="post" enctype="multipart/form-data">
+        <div class="form-group">
+          <label for="input-email">{{ entry_email }}</label>
+          <input type="email" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
         </div>
-        <div class="col-sm-6">
-          <div class="well">
-            <h2>{{ text_returning_customer }}</h2>
-            <p><strong>{{ text_i_am_returning_customer }}</strong></p>
-            <form action="{{ action }}" method="post" enctype="multipart/form-data">
-              <div class="form-group">
-                <label for="input-email">{{ entry_email }}</label>
-                <input type="email" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
-              </div>
-              <div class="form-group">
-                <label for="input-password">{{ entry_password }}</label>
-                <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
-                <a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
-              <button type="submit" class="primary">{{ button_login }}</button>
-              {% if redirect %}
-              <input type="hidden" name="redirect" value="{{ redirect }}" />
-              {% endif %}
-            </form>
+        <div class="form-group">
+          <label for="input-password">{{ entry_password }}</label>
+          <div class="inline-group">
+            <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
+            <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
           </div>
         </div>
-      </div>
-      {{ content_bottom }}
+        <button type="submit" class="primary">{{ button_login }}</button>
+        {% if redirect %}
+          <input type="hidden" name="redirect" value="{{ redirect }}" />
+        {% endif %}
+      </form>
+    </div>
+  </div>
+  {{ content_bottom }}
 </main>
 {{ column_left }}
 {{ column_right }}
