--- a/catalog/view/theme/helium/template/account/register.twig
+++ b/catalog/view/theme/helium/template/account/register.twig
@@ -254,33 +254,34 @@
             <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if register_custom_field[custom_field.custom_field_id] %}{{ register_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-custom-field{{ custom_field.custom_field_id }}" />
             <span class="input-group-btn">
             <button type="button" class="button"><i class="icon-calendar"></i></button>
-            </span></div>
+            </span>
+          </div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span role="alert" class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
       {% endfor %}
     </fieldset>
+
     <fieldset>
       <legend>{{ text_your_password }}</legend>
       <div class="form-group required">
         <label for="input-password">{{ entry_password }}</label>
-        <div class="col-sm-10">
-          <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
-          {% if error_password %}
-          <span class="text-danger">{{ error_password }}</div>
-          {% endif %} </div>
+        <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" autocomplete="new-password"/>
+        {% if error_password %}
+          <span role="alert" class="text-danger">{{ error_password }}</div>
+        {% endif %} 
       </div>
       <div class="form-group required">
         <label for="input-confirm">{{ entry_confirm }}</label>
-        <div class="col-sm-10">
-          <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" />
-          {% if error_confirm %}
-          <span class="text-danger">{{ error_confirm }}</div>
-          {% endif %} </div>
+        <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" autocomplete="new-password"/>
+        {% if error_confirm %}
+          <span role="alert" class="text-danger">{{ error_confirm }}</div>
+        {% endif %}
       </div>
     </fieldset>
+
     <fieldset>
       <legend>{{ text_newsletter }}</legend>
       <div class="form-group">
@@ -316,11 +317,7 @@
       </div>
     </div>
     {% else %}
-    <div class="buttons">
-      <div class="pull-right">
-        <button type="submit" class="primary">{{ button_continue }}</button>
-      </div>
-    </div>
+      <button type="submit" class="primary">{{ button_continue }}</button>
     {% endif %}
   </form>
   {{ content_bottom }}
@@ -329,101 +326,101 @@
 {{ column_right }}
 <script type="text/javascript"><!--
 // Sort the custom fields
-$('#account .form-group[data-sort]').detach().each(function() {
-	if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#account .form-group').length) {
-		$('#account .form-group').eq($(this).attr('data-sort')).before(this);
-	}
+// $('#account .form-group[data-sort]').detach().each(function() {
+// 	if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#account .form-group').length) {
+// 		$('#account .form-group').eq($(this).attr('data-sort')).before(this);
+// 	}
 
-	if ($(this).attr('data-sort') > $('#account .form-group').length) {
-		$('#account .form-group:last').after(this);
-	}
+// 	if ($(this).attr('data-sort') > $('#account .form-group').length) {
+// 		$('#account .form-group:last').after(this);
+// 	}
 
-	if ($(this).attr('data-sort') == $('#account .form-group').length) {
-		$('#account .form-group:last').after(this);
-	}
+// 	if ($(this).attr('data-sort') == $('#account .form-group').length) {
+// 		$('#account .form-group:last').after(this);
+// 	}
 
-	if ($(this).attr('data-sort') < -$('#account .form-group').length) {
-		$('#account .form-group:first').before(this);
-	}
-});
+// 	if ($(this).attr('data-sort') < -$('#account .form-group').length) {
+// 		$('#account .form-group:first').before(this);
+// 	}
+// });
 
-$('input[name=\'customer_group_id\']').on('change', function() {
-	$.ajax({
-		url: 'index.php?route=account/register/customfield&customer_group_id=' + this.value,
-		dataType: 'json',
-		success: function(json) {
-			$('.custom-field').hide();
-			$('.custom-field').removeClass('required');
+// $('input[name=\'customer_group_id\']').on('change', function() {
+// 	$.ajax({
+// 		url: 'index.php?route=account/register/customfield&customer_group_id=' + this.value,
+// 		dataType: 'json',
+// 		success: function(json) {
+// 			$('.custom-field').hide();
+// 			$('.custom-field').removeClass('required');
 
-			for (i = 0; i < json.length; i++) {
-				custom_field = json[i];
+// 			for (i = 0; i < json.length; i++) {
+// 				custom_field = json[i];
 
-				$('#custom-field' + custom_field['custom_field_id']).show();
+// 				$('#custom-field' + custom_field['custom_field_id']).show();
 
-				if (custom_field['required']) {
-					$('#custom-field' + custom_field['custom_field_id']).addClass('required');
-				}
-			}
-		},
-		error: function(xhr, ajaxOptions, thrownError) {
-			alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-		}
-	});
-});
+// 				if (custom_field['required']) {
+// 					$('#custom-field' + custom_field['custom_field_id']).addClass('required');
+// 				}
+// 			}
+// 		},
+// 		error: function(xhr, ajaxOptions, thrownError) {
+// 			alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+// 		}
+// 	});
+// });
 
-$('input[name=\'customer_group_id\']:checked').trigger('change');
+// $('input[name=\'customer_group_id\']:checked').trigger('change');
 //--></script> 
 <script type="text/javascript"><!--
-$('button[id^=\'button-custom-field\']').on('click', function() {
-	var element = this;
+// $('button[id^=\'button-custom-field\']').on('click', function() {
+// 	var element = this;
 
-	$('#form-upload').remove();
+// 	$('#form-upload').remove();
 
-	$('body').prepend('<form enctype="multipart/form-data" id="form-upload" style="display: none;"><input type="file" name="file" /></form>');
+// 	$('body').prepend('<form enctype="multipart/form-data" id="form-upload" style="display: none;"><input type="file" name="file" /></form>');
 
-	$('#form-upload input[name=\'file\']').trigger('click');
+// 	$('#form-upload input[name=\'file\']').trigger('click');
 
-	if (typeof timer != 'undefined') {
-    	clearInterval(timer);
-	}
+// 	if (typeof timer != 'undefined') {
+//     	clearInterval(timer);
+// 	}
 
-	timer = setInterval(function() {
-		if ($('#form-upload input[name=\'file\']').val() != '') {
-			clearInterval(timer);
+// 	timer = setInterval(function() {
+// 		if ($('#form-upload input[name=\'file\']').val() != '') {
+// 			clearInterval(timer);
 
-			$.ajax({
-				url: 'index.php?route=tool/upload',
-				type: 'post',
-				dataType: 'json',
-				data: new FormData($('#form-upload')[0]),
-				cache: false,
-				contentType: false,
-				processData: false,
-				beforeSend: function() {
-					$(element).button('loading');
-				},
-				complete: function() {
-					$(element).button('reset');
-				},
-				success: function(json) {
-					$(element).parent().find('.text-danger').remove();
+// 			$.ajax({
+// 				url: 'index.php?route=tool/upload',
+// 				type: 'post',
+// 				dataType: 'json',
+// 				data: new FormData($('#form-upload')[0]),
+// 				cache: false,
+// 				contentType: false,
+// 				processData: false,
+// 				beforeSend: function() {
+// 					$(element).button('loading');
+// 				},
+// 				complete: function() {
+// 					$(element).button('reset');
+// 				},
+// 				success: function(json) {
+// 					$(element).parent().find('.text-danger').remove();
 
-					if (json['error']) {
-						$(node).parent().find('input').after('<span class="text-danger">' + json['error'] + '</div>');
-					}
+// 					if (json['error']) {
+// 						$(node).parent().find('input').after('<span class="text-danger">' + json['error'] + '</div>');
+// 					}
 
-					if (json['success']) {
-						alert(json['success']);
+// 					if (json['success']) {
+// 						alert(json['success']);
 
-						$(element).parent().find('input').val(json['code']);
-					}
-				},
-				error: function(xhr, ajaxOptions, thrownError) {
-					alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-				}
-			});
-		}
-	}, 500);
+// 						$(element).parent().find('input').val(json['code']);
+// 					}
+// 				},
+// 				error: function(xhr, ajaxOptions, thrownError) {
+// 					alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+// 				}
+// 			});
+// 		}
+// 	}, 500);
 });
 //--></script> 
 <script type="text/javascript"><!--
