--- a/catalog/view/theme/helium/template/affiliate/login.twig
+++ b/catalog/view/theme/helium/template/affiliate/login.twig
@@ -17,6 +17,7 @@
         <p>{{ text_register_account }}</p>
         <a class="primary" href="{{ register }}">{{ button_continue }}</a></div>
     </div>
+    <br/>
     <div class="col-sm-6">
       <div class="well">
         <h2>{{ text_returning_affiliate }}</h2>
@@ -28,8 +29,11 @@
           </div>
           <div class="form-group">
             <label for="input-password">{{ entry_password }}</label>
-            <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
-            <a href="{{ forgotten }}">{{ text_forgotten }}</a> </div>
+            <div class="inline-group">
+              <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
+              <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
+            </div>
+          </div>
           <button type="submit" class="primary">{{ button_login }}</button>
           {% if redirect %}
           <input type="hidden" name="redirect" value="{{ redirect }}" />
