--- a/catalog/view/theme/helium/template/checkout/login.twig
+++ b/catalog/view/theme/helium/template/checkout/login.twig
@@ -22,21 +22,27 @@
       </div>
       {% endif %}
       <p>{{ text_register_account }}</p>
-      <button type="button" id="button-account" class="primary">{{ button_continue }}</button>
+      <button type="submit" type="button" id="button-account" data-action="guestOrRegister" class="primary">
+        {{ button_continue }}
+      </button>
     </fieldset>
-    <fieldset>
-      <legend>{{ text_returning_customer }}</legend>
-      <p>{{ text_i_am_returning_customer }}</p>
-      <div class="form-group">
-        <label for="input-email">{{ entry_email }}</label>
-        <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-email" />
-      </div>
-      <div class="form-group">
-        <label for="input-password">{{ entry_password }}</label>
-        <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" />
-      </div>
-      <div class="btn-group spaced">
-        <button type="button" id="button-login" class="primary">{{ button_login }}</button>
-        <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
-      </div>
+    <form id="login-form" action="{{ action }}" enctype="multipart/form-data">
+      <fieldset>
+        <legend>{{ text_returning_customer }}</legend>
+        <p>{{ text_i_am_returning_customer }}</p>
+        <div class="form-group">
+          <label for="input-email">{{ entry_email }}</label>
+          <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-email" autocomplete="email"/>
+        </div>
+        <div class="form-group">
+          <label for="input-password">{{ entry_password }}</label>
+          <div class="inline-group">
+            <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" autocomplete="current-password"/>
+            <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
+          </div>
+        </div>
+        <button data-action="login" data-form="login-form" type="button" class="primary">
+          {{ button_login }}
+        </button>
+      </form>
     </fieldset>
