Fix markup in customer account

--- a/catalog/view/theme/helium/template/account/address_list.twig
+++ b/catalog/view/theme/helium/template/account/address_list.twig
@@ -29,7 +29,7 @@
   {{ content_bottom }}
   <div class="btn-group spaced">
     <a href="{{ back }}" class="button"><i class="icon-chevron-left"></i>{{ button_back }}</a>
-    <a href="{{ add }}" class="button"><i class="icon-location"></i>{{ button_new_address }}</a>
+    <a href="{{ add }}" class="button primary"><i class="icon-location"></i>{{ button_new_address }}</a>
   </div>
 </main>
 {{ column_left }}
