--- a/catalog/view/theme/helium/template/account/edit.twig
+++ b/catalog/view/theme/helium/template/account/edit.twig
@@ -235,7 +235,7 @@
       </fieldset>
       <div class="btn-group spaced">
         <a href="{{ back }}" class="button"><i class="icon-chevron-left"></i>{{ button_back }}</a>
-        <button type="submit">{{ button_continue }}<i class="icon-chevron-right"></i></button>
+        <button class="primary" type="submit">{{ button_continue }}<i class="icon-chevron-right"></i></button>
       </div>
     </form>
   {{ content_bottom }}
