--- a/catalog/view/theme/helium/template/account/newsletter.twig
+++ b/catalog/view/theme/helium/template/account/newsletter.twig
@@ -20,7 +20,7 @@
         {% endif %}
       </div>
     </fieldset>
-    <div class="buttons">
+    <div class="btn-group spaced">
       <a href="{{ back }}" class="button">{{ button_back }}</a>
       <button type="submit" class="primary">{{ button_continue }}</button>
     </div>
