--- a/catalog/view/theme/helium/template/account/wishlist.twig
+++ b/catalog/view/theme/helium/template/account/wishlist.twig
@@ -3,7 +3,7 @@
 <main role="main" id="account-wishlist">
   {{ content_top }}
   {% include 'helium/template/account/wishlist_table.twig' with {products: products, success:success} %}
-  <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
+  <a class="button" href="{{ continue }}"><i class="icon-chevron-left"></i>{{ button_back }}</a>
   {{ content_bottom }}
 </main>
 {{ column_left }}
