--- a/catalog/view/theme/helium/template/account/order_info.twig
+++ b/catalog/view/theme/helium/template/account/order_info.twig
@@ -57,21 +57,35 @@
           <td class="text-right">{{ column_price }}</td>
           <td class="text-right">{{ column_total }}</td>
           {% if products %}
-          <td style="width: 20px;"></td>
-          {% endif %} </tr>
+          <td ></td>
+          {% endif %} 
+        </tr>
       </thead>
 
       <tbody>
         {% for product in products %}
           <tr>
             <td class="text-left">{{ product.name }}
-              {% for option in product.option %} <br/>
-              &nbsp;<small> - {{ option.name }}: {{ option.value }}</small> {% endfor %}</td>
+              {% for option in product.option %} 
+                <br/>
+                &nbsp;<small> - {{ option.name }}: {{ option.value }}</small> 
+              {% endfor %}
+            </td>
             <td class="text-left">{{ product.model }}</td>
             <td class="text-right">{{ product.quantity }}</td>
             <td class="text-right">{{ product.price }}</td>
             <td class="text-right">{{ product.total }}</td>
-            <td class="text-right" style="white-space: nowrap;">{% if product.reorder %} <a href="{{ product.reorder }}" title="{{ button_reorder }}" class="primary"><i class="icon-cart"></i></a> {% endif %} <a href="{{ product.return }}" title="{{ button_return }}" class="danger"><i class="icon-reply"></i></a></td>
+            <td class="text-right">
+              <div class="inline-group">
+              {% if product.reorder %}
+                <a href="{{ product.reorder }}" title="{{ button_reorder }}" class="primary">
+                  <i class="icon-cart"></i>
+                </a>
+              {% endif %} 
+              <a href="{{ product.return }}" title="{{ button_return }}" class="button">
+                <i class="icon-reply"></i>
+              </a>
+            </td>
           </tr>
         {% endfor %}
 
@@ -150,9 +164,8 @@
   {% endif %}
 
   {{ content_bottom }}
-  <div class="buttons clearfix">
-    <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
-  </div>
+  
+  <a class="button" href="{{ continue }}"><i class="icon-chevron-left"></i>{{ button_back }}</a>
 </main>
 {{ column_left }}
 {{ column_right }}
