--- a/catalog/view/theme/helium/template/account/password.twig
+++ b/catalog/view/theme/helium/template/account/password.twig
@@ -6,30 +6,24 @@
   <form action="{{ action }}" method="post" enctype="multipart/form-data" >
     <fieldset>
       <legend>{{ text_password }}</legend>
-      <div class="form-group required">
+      <div class="form-group required {% if error_password %} has-error {% endif %}">
         <label for="input-password">{{ entry_password }}</label>
-        <div class="col-sm-10">
-          <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
-          {% if error_password %}
-          <span class="text-danger">{{ error_password }}</div>
-          {% endif %}
-        </div>
+        <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
+        {% if error_password %}
+          <span role="alert" class="text-danger">{{ error_password }}</span>
+        {% endif %}
       </div>
-      <div class="form-group required">
+      <div class="form-group required {% if error_confirm %} has-error {% endif %}">
         <label for="input-confirm">{{ entry_confirm }}</label>
-        <div class="col-sm-10">
-          <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" />
-          {% if error_confirm %}
-          <span class="text-danger">{{ error_confirm }}</div>
-          {% endif %}
-        </div>
+        <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" />
+        {% if error_confirm %}
+          <span role="alert" class="text-danger">{{ error_confirm }}</span>
+        {% endif %}
       </div>
     </fieldset>
-    <div class="buttons clearfix">
-      <div class="pull-left"><a href="{{ back }}" class="button">{{ button_back }}</a></div>
-      <div class="pull-right">
-        <button type="submit" class="primary">{{ button_continue }}</button>
-      </div>
+    <div class="btn-group spaced">
+      <a class="button" href="{{ back }}" class="button"><i class="icon-chevron-left"></i>{{ button_back }}</a>
+      <button type="submit" class="primary">{{ button_continue }}</button>
     </div>
   </form>
   {{ content_bottom }}
