PHP: Rework checkout to use new JS ajax() function
- all data now provided in JSON
- one function to malke XHR requests
- one global function to highlight errors (accessible)
- better performance, smaller size

--- a/catalog/view/theme/helium/template/extension/payment/cheque.twig
+++ b/catalog/view/theme/helium/template/extension/payment/cheque.twig
@@ -7,5 +7,5 @@
   <p>{{ text_payment }}</p>
 </div>
 <div class="btn-group">
-  <input type="button" value="{{ button_confirm }}" id="js_button_confirm" class="primary" />
+  <button type="button" data-action="completeOrder" id="js_button_confirm" class="primary">{{ button_confirm }}</button>
 </div>
