--- a/catalog/view/theme/helium/template/extension/payment/cod.twig
+++ b/catalog/view/theme/helium/template/extension/payment/cod.twig
@@ -1,3 +1,11 @@
 <div class="btn-group">
-	<button type="button" id="js_button_confirm" data-confirm="index.php?route=extension/payment/cod/confirm" class="primary">{{ button_confirm }}</button>
+	<button 
+		type="button" 
+		id="js_button_confirm" 
+		data-action="completeOrder"
+		data-confirm="extension/payment/cod/confirm" 
+		class="primary"
+	>
+			{{ button_confirm }}
+		</button>
 </div>
